2006-07-17 Lluis Sanchez Gual  <lluis@novell.com>

	 * MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs: 
	   In IsValidName, don't crash if the language name is not provided.
	 * MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFileNodeBuilder.cs:
	   The IncludeInDeploy command now sets the new BuildAction.FileCopy flag.
	 * MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectNodeBuilder.cs: Removed
	   unused command.
	 * MonoDevelop.Ide.Gui.Dialogs/GacReferencePanel.cs: Track api changes.
	 * MonoDevelop.Ide.Gui.Dialogs/NewFileDialog.cs: Removed unused treeview.
	   Renamed some fields for clarity. Catch some exceptions.
	 * MonoDevelop.Ide.mdp: Updated.
	 * MonoDevelop.Ide.Gui/ProjectOperations.cs: Removed unused method.

2006-07-12 Lluis Sanchez Gual  <lluis@novell.com>

	* Base.glade: Fix some accelerators in the new project dialog.
	* MonoDevelop.Ide.Commands/RefactoryCommands.cs: Add support for
	  "Go to declaration" for local variables.
	* MonoDevelop.Ide.Commands/ProjectCommands.cs: Added command for
	  configuring deploy targets.
	  
	* MonoDevelop.Ide.Gui.Pads.ProjectPad/CombineNodeBuilder.cs:
	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectNodeBuilder.cs: Moved
	  handling of command ProjectCommands.Options to a global handler,
	  so it can be used in the main menu.
	  
	* MonoDevelop.Ide.addin.xml: Added new ConfigureDeployTargets command.
	  Renamed Run menu to Project, which I think makes more sense.
	  Commented out currently unused debugger commands.
	* MonoDevelop.Ide.Gui/ProjectOperations.cs: In ShowOptions, support
	  showing a specific options panel.

2006-07-11 Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectNodeBuilder.cs: Show startup
	  projects in bold.
	* MonoDevelop.Ide.Gui.Pads.ProjectPad/CombineNodeBuilder.cs: Update the
	  tree when the startup project changes.
	* MonoDevelop.Ide.Gui.Pads/DefaultMonitorPad.cs: Use the LeftMargin
	  property for indenting, this fixes bug #78387.
