@@ -1,3 +1,8 @@
+2006-07-18 Lluis Sanchez Gual  <lluis@novell.com>
+
+	* MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs: Fix some problems
+	  with tab reordering.
+
 2006-07-17 Lluis Sanchez Gual  <lluis@novell.com>
 
 	 * MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs: 
